app/ingress/ingress-dns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: dns
spec:
  selector:
    matchLabels:
      app: echoserver
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - image: k8s.gcr.io/e2e-test-images/echoserver:2.5
          name: echoserver
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: dns
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: echoserver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dns
  name: echoserver
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: dns-echo.ngconsulting.org
      http:
        paths:
          - backend:
              service:
                name: echoserver
                port:
                  number: 80
            pathType: Exact
            path: /
