app/ingress/ingress-level2.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: level2a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: level2a
spec:
  selector:
    matchLabels:
      app: echoserver
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - image: k8s.gcr.io/e2e-test-images/echoserver:2.5
          name: echoserver
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: level2a
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: echoserver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: level2a
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=rec,Team=test
    alb.ingress.kubernetes.io/group.name: ingress-2
    alb.ingress.kubernetes.io/group.order: "1"
spec:
  ingressClassName: alb
  rules:
    - host: service-a.ngconsulting.org
      http:
        paths:
          - backend:
              service:
                name: echoserver
                port:
                  number: 80
            path: /
            pathType: Exact
---
---
---
apiVersion: v1
kind: Namespace
metadata:
  name: level2b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: level2b
spec:
  selector:
    matchLabels:
      app: echoserver
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - image: k8s.gcr.io/e2e-test-images/echoserver:2.5
          name: echoserver
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: level2b
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: echoserver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: level2b
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=rec,Team=test
    alb.ingress.kubernetes.io/group.name: ingress-2
    alb.ingress.kubernetes.io/group.order: "2"
spec:
  ingressClassName: alb
  rules:
    - host: service-b.ngconsulting.org
      http:
        paths:
          - backend:
              service:
                name: echoserver
                port:
                  number: 80
            path: /
            pathType: Exact
