app/ingress/ingress-tls.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: tls
spec:
  selector:
    matchLabels:
      app: echoserver
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - image: k8s.gcr.io/e2e-test-images/echoserver:2.5
          name: echoserver
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: tls
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: echoserver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: tls
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:049718131086:certificate/c50c0263-dffa-4b32-a837-87aebc7a135d
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - host: secure-echo.ngconsulting.org
      http:
        paths:
          - backend:
              service:
                name: echoserver
                port:
                  number: 80
            pathType: Exact
            path: /
